# fe-mods-concept

./: .gitignore  CMakeLists.txt  README.md  b
.cache/clangd/index/: ansi-color-codes.h.E01D06C097A55772.idx  logger.c.657521730E7E52C6.idx  main.c.B2B312E6124FE06E.idx
inc/mod/: template.h
mods-src/: glfw.cpp  math.cpp
mods-src/ecs/: CMakeLists.txt
mods-src/ecs/inc/engine/: logger.h
mods-src/ecs/src/: logger.c
src/: main.c
